k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-service
spec:
  selector:
    app: school-saas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
